--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,17 @@ dist.jar=${dist.dir}/TGBiblioteca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.dom4j-1.6.1.jar=C:\\Users\\Lucas\\Documents\\bibliotecas\\dom4j-1.6.1.jar
 file.reference.itextpdf-5.1.0.jar=C:\\Users\\Lucas\\Documents\\itextpdf-5.1.0.jar
 file.reference.itextpdf-5.1.3-javadoc.jar=C:\\Users\\Lucas\\Documents\\itextpdf-5.1.3-javadoc.jar
 file.reference.itextpdf-5.1.3-sources.jar=C:\\Users\\Lucas\\Documents\\itextpdf-5.1.3-sources.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Users\\Lucas\\Documents\\mysql-connector-java-5.1.18-bin.jar
 file.reference.opencv-2410.jar-1=C:\\Users\\Lucas\\Documents\\bibliotecas\\opencv-2410.jar
+file.reference.poi-3.10.1-20140818.jar=C:\\Users\\Lucas\\Documents\\bibliotecas\\poi-3.10.1-20140818.jar
+file.reference.poi-ooxml-3.10.1-20140818.jar=C:\\Users\\Lucas\\Documents\\bibliotecas\\poi-ooxml-3.10.1-20140818.jar
+file.reference.poi-ooxml-schemas-3.10.1-20140818.jar=C:\\Users\\Lucas\\Documents\\bibliotecas\\poi-ooxml-schemas-3.10.1-20140818.jar
+file.reference.stax-api-1.0.1.jar=C:\\Users\\Lucas\\Documents\\bibliotecas\\stax-api-1.0.1.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\Users\\Lucas\\Documents\\bibliotecas\\xmlbeans-2.6.0.jar
 file.reference.ZXing-2.1.jar=C:\\Users\\Lucas\\Documents\\bibliotecas\\ZXing-2.1.jar
 includes=**
 jar.compress=false
@@ -44,7 +50,13 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.ZXing-2.1.jar}:\
-    ${file.reference.opencv-2410.jar-1}
+    ${file.reference.opencv-2410.jar-1}:\
+    ${file.reference.poi-3.10.1-20140818.jar}:\
+    ${file.reference.poi-ooxml-3.10.1-20140818.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.10.1-20140818.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
